Creación de la pagina principal

--- a/pages/paginaPrincipal.html
+++ b/pages/paginaPrincipal.html
@@ -6,11 +6,15 @@
     <meta name="description" content="Plataforma para agendar mantenimientos de bicicletas en Technical Service Daniel Bikers">
     <meta name="keywords" content="Mantenimiento">
     <title>TSDB Mantenimientos</title>
-    <link rel="stylesheet" href="./css/estilos.css">
+    <link rel="stylesheet" href="../css/estilos.css">
 </head>
 <body>
     <div>
-        <iframe src="./pages/paginaPrincipal.html" frameborder="0"></iframe>
+        <div>
+            <iframe src="../layout/navegacion.html" frameborder="0"></iframe>
+        </div>
+        <h1>Thecnical Service Daniel Bikers</h1>
+        <iframe src="../components/principal.html" frameborder="0"></iframe>
     </div>
 </body>
 </html>
