--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="X-UA-Compatible" content="ie=chrome">
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">  
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Plataforma para agendar mantenimientos de bicicletas en Technical Service Daniel Bikers">
     <meta name="keywords" content="Mantenimiento">
