--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">  
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Plataforma para agendar mantenimientos de bicicletas en Technical Service Daniel Bikers">
-    <meta name="keywords" content="Mantenimiento">
+    <meta name="keywords" content="Mantenimiento,Bicicletas,servicio tecnico,bike">
     <title>TSDB Mantenimientos</title>
     <link rel="stylesheet" href="./css/estilos.css">
 </head>
