--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div>
-        <iframe src="./pages/paginaPrincipal.html" frameborder="0" width="100%" height="500"></iframe>
+        <iframe src="./pages/paginaPrincipal.html" frameborder="0" width="100%" height="1000px"></iframe>
     </div>
 </body>
 </html>
