--- a/pages/paginaPrincipal.html
+++ b/pages/paginaPrincipal.html
@@ -13,10 +13,10 @@
 <body>
     <div>
         <div>
-            <iframe src="../layout/navegacion.html" frameborder="0"></iframe>
+            <iframe src="../layout/navegacion.html" frameborder="0" width="100%" height="50px"></iframe>
         </div>
         <h1>Thecnical Service Daniel Bikers</h1>
-        <iframe src="../components/principal.html" frameborder="0"></iframe>
+        <iframe src="../components/principal.html" frameborder="0" width="100%" height="500"></iframe>
     </div>
 </body>
 </html>
