--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div>
-        <!--Favor subir los archivos al repositorio-->
+        <!--Favor subir los archivos-->
         <iframe src="./pages/paginaPrincipal.html" frameborder="0" width="100%" height="1000px"></iframe>
     </div>
 </body>
