--- a/pages/citasTecnico.html
+++ b/pages/citasTecnico.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../css/estilos.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 </head>
-<body>
+<body class="miColorFondo">
     <!--Bootstrap-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
@@ -22,11 +22,11 @@
             <iframe src="../layout/navegacion.html" frameborder="0" width="100%" height="50px"></iframe>
         </div>
         <div>
-            <p>Mantenimiento n</p>
+            <h3 class="micolorLetras">Mantenimiento n</h3>
             <iframe src="../components/formularios/manAgendoForm.html" frameborder="0" width="100%" height="170"></iframe>
         </div>
         <div>
-            <p>Mantenimiento n+1</p>
+            <h3 class="micolorLetras">Mantenimiento n+1</h3>
             <iframe src="../components/formularios/manAgendoForm.html" frameborder="0" width="100%" height="170"></iframe>
         </div>
         <!--La numeración de los mantenimientos dependerá de la cantidad de los que haya agendados-->
