--- a/pages/inicioSesionUsuario.html
+++ b/pages/inicioSesionUsuario.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="../css/estilos.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     </head> 
-    <body>
+    <body class="miColorFondo">
         <!--Bootstrap-->
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
@@ -20,7 +20,7 @@
         <div>
             <iframe src="../layout/navegacion.html" frameborder="0" width="100%" height="100px"></iframe>
         </div>
-        <h3>Inicio de sesión</h3>
+        <h3 class="micolorLetras">Inicio de sesión</h3>
         <iframe src="../components/formularios/iniciosesionusuario.html" frameborder="0" width="100%" height="250px"></iframe>
         <div>
             <a href="./registroUsuario.html"> Para agendar cita, debes tener cuenta. Creala aqui</a>
