estilo del navegador

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <meta name="description" content="Plataforma para agendar mantenimientos de bicicletas en Technical Service Daniel Bikers">
     <meta name="keywords" content="Mantenimiento,Bicicletas,servicio tecnico,bike">
     <title>TSDB Mantenimientos</title>
-    <link rel="stylesheet" href="./css/estilos.css">
+    <link rel="stylesheet" href="../css/estilos.css">
 </head>
 <body>
     <div>
         <!--Favor subir los archivos-->
-        <iframe src="./pages/paginaPrincipal.html" frameborder="0" width="100%" height="1000px"></iframe>
+        <iframe src="../pages/paginaPrincipal.html" frameborder="0" width="100%" height="100px"></iframe>
     </div>
 </body>
 </html>
