--- a/pages/paginaPrincipal.html
+++ b/pages/paginaPrincipal.html
@@ -14,11 +14,11 @@
 <body class="miColorFondo">
     <!--Codigo propio-->
     <div>
-        <div b4->
+        <div class="miColorFondo">
             <iframe src="../layout/navegacion.html" frameborder="0" width="100%" height="50px"></iframe>
         </div>
         <h1 class="micolorLetras">Thecnical Service Daniel Bikers</h1>
-        <iframe src="../components/principal.html" frameborder="0" width="100%" height="500"></iframe>
+        <iframe src="../components/principal.html" frameborder="0" width="100%" height="770"></iframe>
     </div>
     <!--Bootstrap-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
