Estilo para mostrar

--- a/pages/paginaPrincipal.html
+++ b/pages/paginaPrincipal.html
@@ -15,10 +15,10 @@
     <!--Codigo propio-->
     <div>
         <div class="miColorFondo">
-            <iframe src="../layout/navegacion.html" frameborder="0" width="100%" height="50px"></iframe>
+            <iframe src="../layout/navegacion.html" frameborder="0" width="100%" height="55px"></iframe>
         </div>
-        <h1 class="micolorLetras">Thecnical Service Daniel Bikers</h1>
-        <iframe src="../components/principal.html" frameborder="0" width="100%" height="770"></iframe>
+        <h1 class="micolorLetras"> <img src="../img/icon.png" width="5%" class=" img-thumbnail rounded-circle" alt="Logo"> Thecnical Service Daniel Bikers</h1>
+        <iframe src="../components/principal.html" frameborder="0" width="100%" height="730"></iframe>
     </div>
     <!--Bootstrap-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
