--- a/pages/inicioSesionTecnico.html
+++ b/pages/inicioSesionTecnico.html
@@ -16,10 +16,11 @@
         <div>
             <iframe src="../layout/navegacion.html" frameborder="0" width="100%" height="100px"></iframe>
         </div>
-        <h3 class="micolorLetras">Inicio de sesión</h3>
-        <iframe src="../components/formularios/iniciosesiontecnico.html" frameborder="0" width="100%" height="250px"></iframe>
-        <div>
-            <a href="./registroTecnico.html"> Para verificar las citas asignadas, debes tener cuenta. Creala aqui</a>
+        <img src="../img/icon.png" width="5%" class="img-thumbnail rounded-circle" alt="Logo">
+        <div class="miColorFondo mx-auto d-block" style="width: 28rem;">
+            <div class="card-body">
+                <iframe src="../components/formularios/iniciosesiontecnico.html" frameborder="0" width="100%" height="380px"></iframe>
+            </div>
         </div>
         <!--Bootstrap-->
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
