--- a/pages/agendarCita.html
+++ b/pages/agendarCita.html
@@ -16,7 +16,10 @@
         <div>
             <iframe src="../layout/navegacion.html" frameborder="0" width="100%" height="100px"></iframe>
         </div>
-        <h3 class="micolorLetras">AGENDAMIENTO DE CITAS</h3>
+        <div>
+            <h1  class="micolorLetras"> <img src="../img/icon.png" width="5%" class=" img-thumbnail rounded-circle" alt="Logo"> Thecnical Service Daniel Bikers</h1>
+        </div>    
+        
         <iframe src="../components/formularios/agendarCitasForm.html" frameborder="0" width="100%" height="250px"></iframe>
         <!--Bootstrap-->
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
