--- a/pages/inicioSesionTecnico.html
+++ b/pages/inicioSesionTecnico.html
@@ -13,15 +13,20 @@
     </head> 
     <body class="miColorFondo">
         <!--Codigo propio-->
+        
         <div>
             <iframe src="../layout/navegacion.html" frameborder="0" width="100%" height="100px"></iframe>
         </div>
-        <img src="../img/icon.png" width="5%" class="img-thumbnail rounded-circle" alt="Logo">
+        <div>
+            <h1  class="micolorLetras"> <img src="../img/icon.png" width="5%" class=" img-thumbnail rounded-circle" alt="Logo"> Thecnical Service Daniel Bikers</h1>
+        </div>        
         <div class="miColorFondo mx-auto d-block" style="width: 28rem;">
             <div class="card-body">
                 <iframe src="../components/formularios/iniciosesiontecnico.html" frameborder="0" width="100%" height="380px"></iframe>
             </div>
         </div>
+
+    
         <!--Bootstrap-->
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
