--- a/pages/paginaPrincipal.html
+++ b/pages/paginaPrincipal.html
@@ -13,11 +13,13 @@
 </head>
 <body class="miColorFondo">
     <!--Codigo propio-->
-    <div>
+    <div class=jumbotron>
         <div class="miColorFondo">
             <iframe src="../layout/navegacion.html" frameborder="0" width="100%" height="55px"></iframe>
         </div>
-        <h1 class="micolorLetras"> <img src="../img/icon.png" width="5%" class=" img-thumbnail rounded-circle" alt="Logo"> Thecnical Service Daniel Bikers</h1>
+        <div>
+            <h1  class="micolorLetras"> <img src="../img/icon.png" width="5%" class=" img-thumbnail rounded-circle" alt="Logo"> Thecnical Service Daniel Bikers</h1>
+        </div>    
         <div class="miColorFondo mx-auto d-block" style="width: 56rem;">
             <iframe src="../components/principal.html" frameborder="0" width="100%" height="730"></iframe>
         </div>
