--- a/pages/agendarCita.html
+++ b/pages/agendarCita.html
@@ -10,17 +10,21 @@
         <title>TSDB Mantenimientos</title>
         <link rel="stylesheet" href="../css/estilos.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+        <link rel="shortcut icon" href="../img/icon.png" type="image/x-icon">
     </head> 
     <body class="miColorFondo">
         <!--Codigo propio-->
         <div>
-            <iframe src="../layout/navegacion.html" frameborder="0" width="100%" height="100px"></iframe>
+            <iframe src="../layout/navegacion.html" frameborder="0" width="100%" height="63px"></iframe>
         </div>
         <div>
             <h1  class="micolorLetras"> <img src="../img/icon.png" width="5%" class=" img-thumbnail rounded-circle" alt="Logo"> Thecnical Service Daniel Bikers</h1>
-        </div>    
-        
-        <iframe src="../components/formularios/agendarCitasForm.html" frameborder="0" width="100%" height="250px"></iframe>
+        </div>
+        <div class="miColorFondo mx-auto d-block" style="width: 40rem;">
+            <div class="card-body">
+                <iframe src="../components/formularios/agendarCitasForm.html" frameborder="0" width="100%" height="450px"></iframe>
+            </div>
+        </div>
         <!--Bootstrap-->
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
