--- a/pages/paginaPrincipal.html
+++ b/pages/paginaPrincipal.html
@@ -10,19 +10,18 @@
     <title>TSDB Mantenimientos</title>
     <link rel="stylesheet" href="../css/estilos.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="shortcut icon" href="../img/icon.png" type="image/x-icon">
 </head>
-<body class="miColorFondo">
+<body class="miColorFondo" width="100%">
     <!--Codigo propio-->
-    <div class=jumbotron>
-        <div class="miColorFondo">
-            <iframe src="../layout/navegacion.html" frameborder="0" width="100%" height="55px"></iframe>
-        </div>
-        <div>
-            <h1  class="micolorLetras"> <img src="../img/icon.png" width="5%" class=" img-thumbnail rounded-circle" alt="Logo"> Thecnical Service Daniel Bikers</h1>
-        </div>    
-        <div class="miColorFondo mx-auto d-block" style="width: 56rem;">
-            <iframe src="../components/principal.html" frameborder="0" width="100%" height="730"></iframe>
-        </div>
+    <div class="miColorFondo">
+        <iframe src="../layout/navegacion.html" frameborder="0" width="100%" height="63px"></iframe>
+    </div>
+    <div>
+        <h1  class="micolorLetras"> <img src="../img/icon.png" width="5%" class="rounded-circle" alt="Logo"> Thecnical Service Daniel Bikers</h1>
+    </div>    
+    <div class="miColorFondo mx-auto d-block" style="width: 56rem;">
+        <iframe src="../components/principal.html" frameborder="0" width="100%" height="722px"></iframe>
     </div>
     <!--Bootstrap-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
