--- a/pages/registroTecnico.html
+++ b/pages/registroTecnico.html
@@ -10,12 +10,13 @@
         <title>TSDB Mantenimientos</title>
         <link rel="stylesheet" href="../css/estilos.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+        <link rel="shortcut icon" href="../img/icon.png" type="image/x-icon">
     </head> 
     <body class="miColorFondo">
         <!--Código propio-->
         
         <div>
-            <iframe src="../layout/navegacion.html" frameborder="0" width="100%" height="100px"></iframe>
+            <iframe src="../layout/navegacion.html" frameborder="0" width="100%" height="63px"></iframe>
         </div>
         <div>
             <h1  class="micolorLetras"> <img src="../img/icon.png" width="5%" class=" img-thumbnail rounded-circle" alt="Logo"> Thecnical Service Daniel Bikers</h1>
