--- a/pages/registroUsuario.html
+++ b/pages/registroUsuario.html
@@ -7,16 +7,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Plataforma para agendar mantenimientos de bicicletas en Technical Service Daniel Bikers">
         <meta name="keywords" content="Mantenimiento,Bicicletas,servicio tecnico,bike">
-        <title>TSDB Mantenimientos</title>
+        <title>Registro Usuario</title>
         <link rel="stylesheet" href="../css/estilos.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-        <link rel="shortcut icon" href="img/icon.png" type="image/x-icon">
+        <link rel="shortcut icon" href="../img/icon.png" type="image/x-icon">
     </head> 
     <body class="miColorFondo">
         <!--Codigo propio-->
-        
         <div>
-            <iframe src="../layout/navegacion.html" frameborder="0" width="100%" height="100px"></iframe>
+            <iframe src="../layout/navegacion.html" frameborder="0" width="100%" height="63px"></iframe>
         </div>
         <div>
             <h1  class="micolorLetras"> <img src="../img/icon.png" width="5%" class=" img-thumbnail rounded-circle" alt="Logo"> Thecnical Service Daniel Bikers</h1>
@@ -27,8 +26,6 @@
                 <iframe src="../components/formularios/registroUsuarioForm.html" frameborder="0" width="100%" height="850px"></iframe>
             </div>
         </div>
-        
-
         <!--Bootstrap-->
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
